crates/plotnik-tests/tests/02-parser/recovery_unexpected/bare_capture_at_root.txt
@name
------------------ DIAGNOSTICS -------------------
error: expected a pattern
 --> query.ptk:1:1
  |
1 | @name
  | ^^^^^
  |
help: start with `(` for a node, `[` for an alternation, `{` for a sequence, a quote for a literal token, or `_` for a wildcard
